--- a/index.html
+++ b/index.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/style/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
+
+    <section class="landing">
+        <div class="title-container">
+            <div>
+                <p>Kevin</p>
+            </div>
+            <div>
+                <p>Chatelain</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="main">
+        
+    </section>
     
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
