--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             <div>
                 <p>Chatelain</p>
             </div>
+
+            <div class="bouton">
+                <div class="circle"></div>
+            </div>
         </div>
     </section>
 
